compiler/testData/diagnostics/tests/regressions/OrphanStarProjection.fir.kt
class B {}

val b : <!WRONG_NUMBER_OF_TYPE_ARGUMENTS!>B<*><!> = 1
